--- a/nPhysImage/config.h.in
+++ b/nPhysImage/config.h.in
@@ -27,6 +27,9 @@
 /* Define to 1 if you have the `gslcblas' library (-lgslcblas). */
 #undef HAVE_LIBGSLCBLAS
 
+/* Define to 1 if you have the `hdf' library (-lhdf). */
+#undef HAVE_LIBHDF
+
 /* Define to 1 if you have the `jpeg' library (-ljpeg). */
 #undef HAVE_LIBJPEG
 
@@ -36,9 +39,6 @@
 /* Define to 1 if you have the `mfhdf' library (-lmfhdf). */
 #undef HAVE_LIBMFHDF
 
-/* Define to 1 if you have the `mfhdfdll' library (-lmfhdfdll). */
-#undef HAVE_LIBMFHDFDLL
-
 /* Define to 1 if you have the `netpbm' library (-lnetpbm). */
 #undef HAVE_LIBNETPBM
 
@@ -47,6 +47,12 @@
 
 /* Define to 1 if you have the `tiff' library (-ltiff). */
 #undef HAVE_LIBTIFF
+
+/* Define to 1 if you have the `ws2_32' library (-lws2_32). */
+#undef HAVE_LIBWS2_32
+
+/* Define to 1 if you have the `xdr' library (-lxdr). */
+#undef HAVE_LIBXDR
 
 /* Define to 1 if you have the `z' library (-lz). */
 #undef HAVE_LIBZ
