barely working cmake configuration

--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -1,6 +1,7 @@
 # this is the frigging nPhysImage cmakelists
 cmake_minimum_required (VERSION 3.0)
 
+set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -Wall -D__phys_debug=10")
 
 add_library (nPhysImageF SHARED NaNStream.cc  nPhysFormats.cc  nPhysImageF.cc  nPhysMaths.cc  nPhysWave.cc anymap.cc unwrapping/unwrap_goldstein.cc  unwrapping/unwrap_quality.cc  unwrapping/unwrap_simple.cc  unwrapping/unwrap_util.cc  )
 
@@ -10,10 +11,17 @@ target_link_libraries(nPhysImageF "-lfftw3 -lgsl -lgslcblas -lm")
 
 
 # force necessary defines on config.h
-add_definitions(-DHAVE_LIBFFTW3 -DHAVE_LIBGSLCBLAS -DHAVE_LIBJPEG -DHAVE_LIBNETPBM -DHAVE_LIBPTHREAD -DHAVE_LIBTIFF -DHAVE_LIBZ)
+add_definitions(-DHAVE_LIBFFTW3 -DHAVE_LIBGSLCBLAS -DHAVE_LIBJPEG -DHAVE_LIBPTHREAD  -DHAVE_LIBZ)
 
 # libraries to check for
 # HAVE_LIBFFTW3_THREADS  
+
+# pgm
+find_library(PBM NAMES netpbm PATHS /usr/lib)
+if (NOT ${PBM} STREQUAL "PBM-NOTFOUND")
+	target_link_libraries (nPhysImageF ${PBM}) 
+	add_definitions(-DHAVE_LIBNETPBM)
+endif()
 
 # hdf4
 find_library (HDF4 NAMES mfhdf PATHS /usr/lib)
@@ -22,6 +30,14 @@ if (NOT ${HDF4} STREQUAL "HDF4-NOTFOUND")
 	target_link_libraries (nPhysImageF ${HDF4})
 	include_directories(BEFORE "/usr/include/hdf")
 	add_definitions(-DHAVE_LIBMFHDF)
+endif()
+
+
+find_package(TIFF REQUIRED)
+if (TIFF_FOUND)
+	include_directories(${TIFF_INCLUDE_DIRS})
+	set(LIBS ${LIBS} ${TIFF_LIBRARIES})
+	add_definitions(-DHAVE_TIFF)
 endif()
 
 # list include_directories
