--- a/nPhysImage/CMakeLists.txt
+++ b/nPhysImage/CMakeLists.txt
@@ -1,42 +1,107 @@
 # this is the frigging nPhysImage cmakelists
 cmake_minimum_required (VERSION 3.0)
 
+
+set (CMAKE_C_COMPILER "gcc")
+set (CMAKE_CXX_COMPILER "g++")
+
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
+
+
+
+set (CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11")
+
 set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -Wall -D__phys_debug=10")
 
 add_library (nPhysImageF SHARED NaNStream.cc  nPhysFormats.cc  nPhysImageF.cc  nPhysMaths.cc  nPhysWave.cc anymap.cc unwrapping/unwrap_goldstein.cc  unwrapping/unwrap_quality.cc  unwrapping/unwrap_simple.cc  unwrapping/unwrap_util.cc  )
 
 
 target_include_directories (nPhysImageF PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(nPhysImageF "-lfftw3 -lgsl -lgslcblas -lm")
+target_link_libraries(nPhysImageF "-lm")
 
 
 # force necessary defines on config.h
-add_definitions(-DHAVE_LIBFFTW3 -DHAVE_LIBGSLCBLAS -DHAVE_LIBJPEG -DHAVE_LIBPTHREAD  -DHAVE_LIBZ)
+add_definitions(-DHAVE_LIBPTHREAD)
 
-# libraries to check for
-# HAVE_LIBFFTW3_THREADS  
+include_directories(BEFORE "/opt/local/include")
+include_directories(BEFORE "/usr/local/include")
+
+# gsl
+find_library(GSL NAMES gsl PATHS /usr/lib /opt/local/lib)
+if (NOT ${GSL} STREQUAL "GSL-NOTFOUND")
+	message (STATUS "using gsl: ${GSL}")
+	set(LIBS ${LIBS} ${GSL}) 
+	add_definitions(-DHAVE_LIBGSL)
+endif()
+
+# gslcblas
+find_library(GSLCBLAS NAMES gslcblas PATHS /usr/lib /opt/local/lib)
+if (NOT ${GSLCBLAS} STREQUAL "GSLCBLAS-NOTFOUND")
+	message (STATUS "using gslcblas: ${GSL}")
+	set(LIBS ${LIBS} ${GSLCBLAS}) 
+	add_definitions(-DHAVE_LIBGSLCBLAS)
+endif()
+
+# fftw_threads
+find_library(FFTW_THREADS NAMES fftw3_threads PATHS /usr/lib /opt/local/lib)
+if (NOT ${FFTW_THREADS} STREQUAL "FFTW_THREADS-NOTFOUND")
+	message (STATUS "using FFTW_THREADS: ${FFTW_THREADS}")
+	set(LIBS ${LIBS} ${FFTW_THREADS}) 
+	add_definitions(-DHAVE_LIBFFTW_THREADS)
+endif()
+
+#fftw
+find_library(FFTW NAMES fftw3 PATHS /usr/lib /opt/local/lib)
+if (NOT ${FFTW} STREQUAL "FFTW-NOTFOUND")
+	message (STATUS "using FFTW: ${FFTW}")
+	set(LIBS ${LIBS} ${FFTW}) 
+	add_definitions(-DHAVE_LIBFFTW)
+endif()
+
 
 # pgm
-find_library(PBM NAMES netpbm PATHS /usr/lib)
+find_library(PBM NAMES netpbm PATHS /usr/lib /opt/local/lib)
 if (NOT ${PBM} STREQUAL "PBM-NOTFOUND")
-	target_link_libraries (nPhysImageF ${PBM}) 
+	message (STATUS "using netpbm: ${PBM}")
+	set(LIBS ${LIBS} ${PBM}) 
 	add_definitions(-DHAVE_LIBNETPBM)
+	if (APPLE) 
+		include_directories(BEFORE "/opt/local/include/netpbm")
+	endif()
 endif()
 
 # hdf4
 find_library (HDF4 NAMES mfhdf PATHS /usr/lib)
 if (NOT ${HDF4} STREQUAL "HDF4-NOTFOUND")
 	message (STATUS "using hdf4: ${HDF4}")
-	target_link_libraries (nPhysImageF ${HDF4})
+	set(LIBS ${LIBS} ${HDF4})
 	include_directories(BEFORE "/usr/include/hdf")
 	add_definitions(-DHAVE_LIBMFHDF)
+endif()
+
+find_package(JPEG REQUIRED)
+if (JPEG_FOUND)
+	include_directories(${JPEG_INCLUDE_DIRS})
+	set(LIBS ${LIBS} ${JPEG_LIBRARIES})
+	add_definitions(-DHAVE_JPEG)
+endif()
+
+find_package(ZLIB REQUIRED)
+if (ZLIB_FOUND)
+	include_directories(${ZLIB_INCLUDE_DIRS})
+	set(LIBS ${LIBS} ${ZLIB_LIBRARIES})
+	add_definitions(-DHAVE_ZLIB)
 endif()
 
 
 find_package(TIFF REQUIRED)
 if (TIFF_FOUND)
 	include_directories(${TIFF_INCLUDE_DIRS})
-	set(LIBS ${LIBS} ${TIFF_LIBRARIES})
+    set(LIBS ${LIBS} ${TIFF_LIBRARIES})
 	add_definitions(-DHAVE_TIFF)
 endif()
 
@@ -45,3 +110,8 @@ get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTO
 foreach(dir ${dirs})
   message(STATUS "dir='${dir}'")
 endforeach()
+
+
+target_link_libraries(nPhysImageF ${LIBS})
+
+
