--- a/resources/neutrino.plist
+++ b/resources/neutrino.plist
@@ -12,9 +12,9 @@
 			<key>CFBundleTypeIconFile</key>
 			<string>@ICON@</string>
 			<key>CFBundleTypeName</key>
-			<string>Neutrino Session</string>
+			<string>NeutrinoSession</string>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			<string>Viewer</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.image</string>
@@ -41,32 +41,44 @@
 			<key>CFBundleTypeIconFile</key>
 			<string>@ICON@</string>
 			<key>CFBundleTypeName</key>
-			<string>Neutrino images</string>
+			<string>NeutrinoImage</string>
 			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
+			<string>Viewer</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>public.image</string>
 			</array>
 		</dict>
 	</array>
+	<key>CFBundleDevelopmentRegion</key>
+	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>Neutrino</string>
+	<string>${APPLE_GUI_EXECUTABLE}</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Neutrino</string>
+	<string>${APPLE_GUI_INFO_STRING}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon.icns</string>
+	<string>${APPLE_GUI_ICON}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.neutrino</string>
+	<string>${APPLE_GUI_IDENTIFIER}</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
+	<key>CFBundleLongVersionString</key>
+	<string>${APPLE_GUI_LONG_VERSION_STRING}</string>
+	<key>CFBundleName</key>
+	<string>${APPLE_GUI_BUNDLE_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>unknown</string>
+	<string>${APPLE_GUI_SHORT_VERSION_STRING}</string>
 	<key>CFBundleSignature</key>
-	<string>neut</string>
+	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.0.0</string>
-	<key>NOTE</key>
-	<string>The only neutrino faster than light</string>
+	<string>${APPLE_GUI_BUNDLE_VERSION}</string>
+	<key>CSResourcesFileMapped</key>
+	<true/>
+	<key>LSRequiresCarbon</key>
+	<true/>
+	<key>NSHumanReadableCopyright</key>
+	<string>${APPLE_GUI_COPYRIGHT}</string>
 </dict>
 </plist>
