--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,16 @@
 
 cmake_minimum_required (VERSION 3.0)
 
-project (neutrino)
+set(README_FILE "${${PROJECT_NAME}_SOURCE_DIR}/README.md")
 
 add_subdirectory (nPhysImage)
 add_subdirectory (src)
 
-# for debug use cmake . -DCMAKE_BUILD_TYPE=Debug
-set (CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb -Wall -D__phys_debug=10")
+include (CPack)
 
+#set (CPACK_PACKAGE_NAME "Neutrino")
+#set (CPACK_PACKAGE_VERSION "2.0")
 
+#set(CPACK_DEBIAN_PACKAGE_MAINTAINER "alessandro.flacco@polytechnique.edu")
+#set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Neutrino image manipulation program")
+#set(CPACK_DEBIAN_PACKAGE_SECTION "science")
