* fixed nHDF5 for qt5 * fixed FindNeutrinoGuiComponents for correct handling of modifications to SOURCES variable (find_package qt4/5 to the bottom of the file) * CMakeLists.txt to compile osxApp.cc only if needed * changed QString::toAscii() -> QString::toStdString() in neutrino.cc * minor syntax corrections

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -83,8 +83,11 @@ set (SOURCES
     pans/nIntegralInversion.cc pans/nLineoutBoth.cc pans/winlist/nTreeWidget.cc 
     pans/winlist/nWinList.cc pans/nCutoffMask.cc pans/nCompareLines.cc 
     pans/nShortcuts.cc pans/nOperator.cc pans/nLineout.cc nView.cc nGenericPan.cc 
-    osxApp.cc nApp.cc main.cc 
+    nApp.cc main.cc 
 )
+if (APPLE)
+	list (APPEND SOURCES osxApp.cc)
+endif()
 
 ## UIs
 set (UIS 
